--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1874,8 +1874,10 @@ textarea.form-input::-webkit-resizer { display: none; }
 
 
   /**
-	 * RESUME
+	 * cat
 	 */
+   /* styles.css */
+
 
   .timeline-text { max-width: 700px; }
 
